# trade-analysis-app

./: .env.example  .gitignore  CLAUDE.md  README.md  hyperliquid_commodities_schema.csv  onchain-commodities-mvp-blueprint.md  ostium_commodities_schema.csv  pyproject.toml
.claude/: settings.local.json
db/migrations/: 0001_schema.sql  0002_seed_instruments.sql  0003_seed_sensitivity_rules.sql  0004_add_brent_instrument.sql  0005_add_tradeable_flag.sql  0006_standardize_crude_vocabulary.sql  0007_expand_hyperliquid_reference.sql  0008_add_spot_prices_table.sql  0009_fix_ostium_quote_and_copper_vocabulary.sql  0010_all_venues_tradeable.sql  0011_add_venue_type.sql  0012_seed_bydfi_instruments.sql  0013_add_liquidity_profiles.sql  0014_add_candidate_funding_and_confidence.sql
ostium/: package.json  read_client.js
reports/: build-step-3-scoring-engine.md
scripts/: apply_migrations.py  run_bydfi_liquidity_capture.py  run_discrepancy_check.py  run_scoring_report.py  run_snapshot.py  run_spot_refresh.py
src/onchain_console/: bydfi.py  calcs.py  config.py  db.py  discrepancy.py  history.py  hyperliquid.py  scoring.py  snapshot_service.py  spot_prices.py  spot_service.py
tests/: test_bydfi.py  test_calcs.py  test_carry_score_integration.py  test_discrepancy.py  test_history_integration.py  test_instrument_fit_integration.py  test_liquidity_profiles_integration.py  test_liquidity_score_integration.py  test_pairing.py  test_scoring_integration.py  test_snapshot_service.py  test_spot_prices.py  test_tracking_error_integration.py
(+7 files in other folders)
