[project]
name = "onchain-console"
version = "0.1.0"
description = "Personal, analysis-only on-chain commodities swing-trade intelligence console (no execution capability)"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "requests>=2.32",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
